# app/Http/Controllers/Auth/AuthenticationController.php
@@ -2,9 +2,16 @@
 
 namespace App\Http\Controllers\Auth;
 
+use App\Forms\RegisterForm;
+use App\Functions\Auth\AuthentificationFunction;
+use App\Helper\MainHelper;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\RegistrationForm;
+use App\Models\User;
+use Exception;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Validation\ValidationException;
 
 /**
     * @OA\Info(
@@ -16,14 +23,52 @@ use Illuminate\Http\Request;
 class AuthenticationController extends Controller
 {
 
+    public function __construct(
+        private AuthentificationFunction $authentificationFunction,
+        private MainHelper $mainHelper
+    ){
+        // $this->authentificationFunction = $authentificationFunction;
+        // $this->mainHelper = $mainHelper;
+    }
+
      /**
      * @OA\Post(
-     *     path="/api/register",
+     *     path="/api/auth/register",
      *     summary="Register a new user",
      *     tags={"Authentication"},
      *     @OA\RequestBody(
      *         required=true,
-     *        @OA\JsonContent(ref="D:/test/limabean/task-manager/dto/schemas/json/authentication/registrationForm.json")
+     *         @OA\JsonContent(
+     *             type="object",
+     *             required={"name", "email", "password", "password_confirmation"},
+     *             @OA\Property(
+     *                 property="name",
+     *                 type="string",
+     *                 description="The name of the user",
+     *                 example="John Doe"
+     *             ),
+     *             @OA\Property(
+     *                 property="email",
+     *                 type="string",
+     *                 format="email",
+     *                 description="The email address of the user",
+     *                 example="john.doe@example.com"
+     *             ),
+     *             @OA\Property(
+     *                 property="password",
+     *                 type="string",
+     *                 format="password",
+     *                 description="The password for the user account",
+     *                 example="password123"
+     *             ),
+     *             @OA\Property(
+     *                 property="confirm_password",
+     *                 type="string",
+     *                 format="password",
+     *                 description="Password confirmation",
+     *                 example="password123"
+     *             )
+     *         )
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -44,9 +89,24 @@ class AuthenticationController extends Controller
      *     )
      * )
      */
-    public function register(RegistrationForm $request){
-        $validated = $request->validated();
+    public function register(Request $request): JsonResponse {
+        $register = null;
+        try{
+            $data = $request->post();
 
-        return true;
+            $validated = RegisterForm::register($data);
+            if($validated->fails())
+                throw new ValidationException($validated);
+
+            $register =$this->authentificationFunction->register($data);
+
+            $register = $this->mainHelper->buildResponse($register, 200, );
+        }catch(ValidationException $e){
+            $register = $this->mainHelper->buildResponse(null, 400, $e->errors());
+        }catch(Exception $e){
+            $register = $this->mainHelper->buildResponse(null, 500, message: $e);
+        }
+
+        return response()->json($register, $register['status']);
     }
 }
